--- a/LearnEnglish/MainPage.xaml
+++ b/LearnEnglish/MainPage.xaml
@@ -47,7 +47,7 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="1" Text="LearnEnglish" FontSize="54" Foreground="White"
+                <TextBlock x:Name="title" Grid.Column="1" Text="LearnEnglish" FontSize="54" Foreground="White"
                            HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="Snap ITC" />
                 <TextBlock Grid.Column="1" Grid.Row="1" Text="Najlepsza Aplikacja do nauki języka angielskiego" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" FontFamily="Monotype Corsiva" />
