--- a/LearnEnglish/Nauka1.xaml
+++ b/LearnEnglish/Nauka1.xaml
@@ -56,15 +56,14 @@
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
                 <TextBlock Grid.Column="1" Grid.Row="3" Text="English:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" FontFamily="Monotype Corsiva" />
-                <TextBlock x:Name="txtEng" Grid.Column="1" Grid.Row="4" Text="Football" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="#FF51FF00"
+                <TextBlock x:Name="txtEng" Grid.Column="1" Grid.Row="4" Text="" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="#FF51FF00"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" Visibility="Collapsed" FontWeight="Bold" />
-                <Button x:Name="btnSpeak" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" Content="&#xE890;" Height="50" Foreground="Black"  Width="100" Margin="300 0 0 0" FontWeight="Bold" FontSize="24" Click="btnSpeak_Click" >
+                <TextBlock x:Name="txtExample" Grid.Column="1" Grid.Row="4" Text="Tutaj będzie przykładowe zdanie." Visibility="Visible" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 68 0 0" Foreground="#FF51FF00" TextWrapping="WrapWholeWords"></TextBlock>
+                <Button x:Name="btnSpeak" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" Content="&#xE890;" Height="40" Foreground="Black"  Width="80" Margin="300 0 0 0" FontWeight="Bold" FontSize="24" Click="btnSpeak_Click" >
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="Black" Offset="0.94"/>
-                            <GradientStop Color="White" Offset="0.803"/>
-                            <GradientStop Color="Black" Offset="0.034"/>
-                            <GradientStop Color="White" Offset="0.214"/>
+                            <GradientStop Color="White" Offset="1"/>
+                            <GradientStop Color="#FF7E7E7E"/>
                         </LinearGradientBrush>
                     </Button.Background>
                 </Button>
