--- a/LearnEnglish/Nauka1.xaml
+++ b/LearnEnglish/Nauka1.xaml
@@ -9,7 +9,7 @@
 
     <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="50" OpenPaneLength="150" IsPaneOpen="False" Width="Auto">
         <SplitView.Pane>
-            <StackPanel Background="#FF595757">
+            <StackPanel Background="#FF830202">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Name="txtLogo" Text="English" FontSize="18" VerticalAlignment="Center" Visibility="Collapsed" Margin="50 0 0 0"></TextBlock>
                     <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" Content="&#xE71D;" Height="50" Foreground="#FFAC0303"  Width="50" Background="Transparent" Click="btnShowPane_Click" />
@@ -30,7 +30,10 @@
         </SplitView.Pane>
 
         <SplitView.Content>
-            <Grid Background="Black">
+            <Grid>
+                <Grid.Background>
+                    <ImageBrush Stretch="UniformToFill" ImageSource="assets/tlo.jpg"/>
+                </Grid.Background>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -46,20 +49,20 @@
                     <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
                 <MediaElement x:Name="mediaSound"></MediaElement>
-                <TextBlock x:Name="txtCategory" Grid.Column="1" Text="Sport" FontSize="54" Foreground="White"
-                           HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="Snap ITC" />
+                <TextBlock x:Name="txtCategory" Grid.Column="1" Text="Sport" FontSize="40" FontStretch="Condensed" TextWrapping="WrapWholeWords" Foreground="#FFC32323"
+                           HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="News706 BT" />
                 
-                <TextBlock Grid.Column="1" Grid.Row="1" Text="Polish:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="Monotype Corsiva" />
+                <TextBlock Grid.Column="1" Grid.Row="1" Text="Polish:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="News706 BT" />
 
                 <TextBlock x:Name="txtPol" Grid.Column="1" Grid.Row="2" Text="Piłka nożna" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
-                <TextBlock Grid.Column="1" Grid.Row="3" Text="English:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" FontFamily="Monotype Corsiva" />
+                <TextBlock Grid.Column="1" Grid.Row="3" Text="English:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" FontFamily="News706 BT" />
                 <TextBlock x:Name="txtEng" Grid.Column="1" Grid.Row="4" Text="" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="#FF51FF00"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" Visibility="Collapsed" FontWeight="Bold" />
-                <TextBlock x:Name="txtExample" Grid.Column="1" Grid.Row="4" Text="Tutaj będzie przykładowe zdanie." Visibility="Visible" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 68 0 0" Foreground="#FF51FF00" TextWrapping="WrapWholeWords"></TextBlock>
-                <Button x:Name="btnSpeak" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" Content="&#xE890;" Height="40" Foreground="Black"  Width="80" Margin="300 0 0 0" FontWeight="Bold" FontSize="24" Click="btnSpeak_Click" >
+                <TextBlock x:Name="txtExample" Grid.Column="1" Grid.Row="4" Text="Tutaj będzie przykładowe zdanie." Visibility="Visible" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 68 0 0" Foreground="#FF51FF00" TextWrapping="WrapWholeWords"></TextBlock>
+                <Button x:Name="btnSpeak" Grid.Column="1" Grid.Row="3" HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" Content="&#xE890;" Height="40" Foreground="Black"  Width="80" Margin="300 0 0 0" FontWeight="Bold" FontSize="24" Click="btnSpeak_Click" >
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="White" Offset="1"/>
