--- a/LearnEnglish/MainPage.xaml
+++ b/LearnEnglish/MainPage.xaml
@@ -9,7 +9,7 @@
 
         <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="50" OpenPaneLength="150" IsPaneOpen="False" Width="Auto">
             <SplitView.Pane>
-                <StackPanel Background="#FF595757">
+            <StackPanel Background="#FF830202">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock x:Name="txtLogo" Text="English" FontSize="18" VerticalAlignment="Center" Visibility="Collapsed" Margin="50 0 0 0"></TextBlock>
                         <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" Content="&#xE71D;" Height="50" Foreground="#FFAC0303"  Width="50" Background="Transparent" Click="btnShowPane_Click" />
@@ -33,7 +33,10 @@
                 </StackPanel>
             </SplitView.Pane>
             <SplitView.Content>
-            <Grid Background="Black">
+            <Grid >
+                <Grid.Background>
+                    <ImageBrush Stretch="UniformToFill" ImageSource="assets/tlo.jpg"/>
+                </Grid.Background>
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -47,19 +50,16 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="title" Grid.Column="1" Text="LearnEnglish" FontSize="54" Foreground="White"
-                           HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="Snap ITC" />
+                <TextBlock x:Name="title" Grid.Column="1" FontSize="40" Text="LearnEnglish" Foreground="White"
+                           HorizontalAlignment="Center"  Margin="0 20 0 0" FontFamily="Elephant" />
                 <TextBlock Grid.Column="1" Grid.Row="1" Text="Najlepsza Aplikacja do nauki języka angielskiego" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" FontFamily="Monotype Corsiva" />
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" FontFamily="News706 BT" />
 
                 <TextBlock Grid.Column="1" Grid.Row="2" Text="Wybierz opcje z menu po lewej, aby rozpocząć." TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
                 <TextBlock Grid.Column="1" Grid.Row="3" Text="Kliknij 'Nauka', aby rozpocząć naukę słówek Kliknij 'Test' aby rozpocząć test słówek. W celu zakupu pełnej wersji kliknij 'Info'" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
-                <Image x:Name="MainLogo" Source="Assets/MainLogo.jpg" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch"  Margin="50 50 50 50" Grid.RowSpan="2" VerticalAlignment="Stretch" />
-
-
-
+                <Image x:Name="MainLogo" Source="Assets/MainLogo.jpg" Grid.Column="1" Grid.Row="4" HorizontalAlignment="Stretch"  Margin="30 30 50 30" Grid.RowSpan="2" VerticalAlignment="Stretch" />
             </Grid>
         </SplitView.Content>
         </SplitView>
