--- a/LearnEnglish/Nauka.xaml
+++ b/LearnEnglish/Nauka.xaml
@@ -113,7 +113,8 @@
                     <ListViewItem>Rower</ListViewItem>
                     <ListViewItem>Chemia</ListViewItem>
                 </ListView>
-                <Button Grid.Column="1" Grid.Row="3" x:Name="btnStart" Content="Rozpocznij " Width="100" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnStart_Click"></Button>
+                <Button Grid.Column="1" Grid.Row="3" x:Name="btnStart" Content="Rozpocznij " Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-100 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnStart_Click"></Button>
+                <Button Grid.Column="1" Grid.Row="3" x:Name="btnBrowse" Content="Przeglądaj " Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="100 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnBrowse_Click"></Button>
             </Grid>
         </SplitView.Content>
     </SplitView>
