--- a/LearnEnglish/Test.xaml
+++ b/LearnEnglish/Test.xaml
@@ -52,17 +52,17 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="txtCategory" Grid.Column="1" Text="Test" FontSize="54" Foreground="White"
-                           HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="Elephant" />
-                <TextBlock x:Name="txtCount" Grid.Column="1" Text="0" FontSize="14" Foreground="White"
+                <TextBlock x:Name="txtCategory" Grid.Column="1" Text="Sport" FontSize="40" FontStretch="Condensed" TextWrapping="WrapWholeWords" Foreground="#FFC32323"
+                           HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="News706 BT" />
+                <TextBlock x:Name="txtCount" Grid.Column="1" Text="0" FontSize="30" Foreground="White"
                             VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 30 30 0" />
-                <TextBlock Grid.Column="1" Grid.Row="1" Text="Polish:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="Monotype Corsiva" />
+                <TextBlock Grid.Column="1" Grid.Row="1" Text="Polish:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="News706 BT" />
 
                 <TextBlock x:Name="txtPol" Grid.Column="1" Grid.Row="2" Text="Piłka nożna" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
-                <TextBlock Grid.Column="1" Grid.Row="3" Text="Wybierz pasujące słowo:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" FontFamily="Monotype Corsiva" />
+                <TextBlock Grid.Column="1" Grid.Row="3" Text="Wybierz pasujące słowo:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="News706 BT" />
                 <StackPanel x:Name="rbtnStackPanel" Background="#FF8F553F" Grid.Column="1" Grid.Row="4">
                     <RadioButton x:Name ="ans1" GroupName="answer"  HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" Content="Football" BorderBrush="White"/>
                     <RadioButton x:Name ="ans2" Content="Hospital" GroupName="answer" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" />
