--- a/LearnEnglish/Nauka.xaml
+++ b/LearnEnglish/Nauka.xaml
@@ -7,25 +7,24 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="50" OpenPaneLength="150" IsPaneOpen="False" Width="Auto">
+    <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="70" OpenPaneLength="200" IsPaneOpen="False" Width="Auto">
         <SplitView.Pane>
             <StackPanel Background="#FF830202">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Name="txtLogo" Text="English" FontSize="18" VerticalAlignment="Center" Visibility="Collapsed" Margin="50 0 0 0"></TextBlock>
-                    <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" Content="&#xE71D;" Height="50" Foreground="#FFAC0303"  Width="50" Background="Transparent" Click="btnShowPane_Click" />
+                    <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" FontSize="30" Content="&#xE71D;" Height="50" Foreground="White"  Width="80" Background="Transparent" Click="btnShowPane_Click" />
                 </StackPanel>
                 <StackPanel x:Name="paneLearn" Orientation="Horizontal">
-                    <Button x:Name="btnStartLearn" FontFamily="Segoe MDL2 Assets" Content="&#xE8FC;" Height="50"  Width="50" Background="Transparent" Foreground="#FFE2CC3F" IsTapEnabled="False" IsRightTapEnabled="False" IsHoldingEnabled="False" IsDoubleTapEnabled="False" >
-                    </Button>
-                    <TextBlock Text="Nauka" Foreground="#FFE2CC3F" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnStartLearn" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE8FC;" Height="50" Width="200" Padding="-120 0 0 0"  Background="Transparent" Foreground="Yellow"  />
+                    <TextBlock Text="Nauka" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="Yellow"></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btnBack" FontFamily="Segoe MDL2 Assets" Content="&#xE830;" Height="50"  Width="50" Background="Transparent" Click="btnBack_Click" />
-                    <TextBlock Text="Powrót do menu" FontSize="12" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnBack" FontFamily="Segoe MDL2 Assets"  FontSize="25" Content="&#xE830;" Height="50"   Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="White" Click="btnBack_Click" ToolTipService.ToolTip="Powrót do głównego menu." />
+                    <TextBlock Text="Powrót" FontSize="25" VerticalAlignment="Center" Margin="-120" TextWrapping="Wrap"  Foreground="White"></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btnAbout" FontFamily="Segoe MDL2 Assets" Content="&#xE897;" Height="50"  Width="50" Background="Transparent" />
-                    <TextBlock Text="Info" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnAbout" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE897;" Height="50"  Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="White" />
+                    <TextBlock Text="Info" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="White"></TextBlock>
                 </StackPanel>
 
             </StackPanel>
@@ -113,9 +112,9 @@
                     <ListViewItem>Rower</ListViewItem>
                     <ListViewItem>Chemia</ListViewItem>
                 </ListView>
-                <Button Grid.Column="1" Grid.Row="3" x:Name="btnStart"  Content="Rozpocznij " Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-200 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnStart_Click"></Button>
-                <Button Grid.Column="1" Grid.Row="3" x:Name="btnBrowse" Content="Przeglądaj " Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnBrowse_Click"></Button>
-                <Button Grid.Column="1" Grid.Row="3" x:Name="btnTest"   Content="Test "       Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="200 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnTest_Click"/>
+                <Button Grid.Column="1" Grid.Row="3" x:Name="btnStart"  Content="Rozpocznij " Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="-200 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnStart_Click" ToolTipService.ToolTip="Rozpocznij nauke słówek."></Button>
+                <Button Grid.Column="1" Grid.Row="3" x:Name="btnBrowse" Content="Przeglądaj " Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnBrowse_Click" ToolTipService.ToolTip="Przeglądaj lub usuwaj słówka z wybranej kategorii."></Button>
+                <Button Grid.Column="1" Grid.Row="3" x:Name="btnTest"   Content="Test "       Width="90" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="200 50 0 0" Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" UseSystemFocusVisuals="True" Background="#66FFFFFF" Click="btnTest_Click" ToolTipService.ToolTip="Rozpocznij nauke poprzez test."/>
             </Grid>
         </SplitView.Content>
     </SplitView>
