--- a/LearnEnglish/Test2.xaml
+++ b/LearnEnglish/Test2.xaml
@@ -6,28 +6,28 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="50" OpenPaneLength="150" IsPaneOpen="False" Width="Auto">
+    <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="70" OpenPaneLength="200" IsPaneOpen="False" Width="Auto">
         <SplitView.Pane>
             <StackPanel Background="#FF830202">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Name="txtLogo" Text="English" FontSize="18" VerticalAlignment="Center" Visibility="Collapsed" Margin="50 0 0 0"></TextBlock>
-                    <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" Content="&#xE71D;" Height="50" Foreground="#FFAC0303"  Width="50" Background="Transparent" Click="btnShowPane_Click" />
+                    <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" FontSize="30" Content="&#xE71D;" Height="50" Foreground="White"  Width="80" Background="Transparent" Click="btnShowPane_Click" />
                 </StackPanel>
                 <StackPanel x:Name="paneLearn" Orientation="Horizontal">
-                    <Button x:Name="btnStartLearn" FontFamily="Segoe MDL2 Assets" Content="&#xE8FC;" Height="50"  Width="50" Background="Transparent" Click="btnStartLearn_Click" />
-                    <TextBlock Text="Nauka" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnStartLearn" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE8FC;" Height="50" Width="200" Padding="-120 0 0 0"  Background="Transparent" Foreground="White" Click="btnStartLearn_Click" />
+                    <TextBlock Text="Nauka" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="White"></TextBlock>
                 </StackPanel>
                 <StackPanel x:Name="paneTest" Orientation="Horizontal">
-                    <Button x:Name="btnStartTest" FontFamily="Segoe MDL2 Assets" Content="&#xE70F;" Height="50"  Width="50" Foreground="#FFE2CC3F" Background="Transparent"  />
-                    <TextBlock Text="Test" Foreground="#FFE2CC3F" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnStartTest" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE70F;" Height="50" Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="Yellow"  />
+                    <TextBlock Text="Test" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="Yellow"></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btnBack" FontFamily="Segoe MDL2 Assets" Content="&#xE830;" Height="50"  Width="50" Background="Transparent" Click="btnBack_Click" />
-                    <TextBlock Text="Powrót do menu" FontSize="12" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnBack" FontFamily="Segoe MDL2 Assets"  FontSize="25" Content="&#xE830;" Height="50"   Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="White" Click="btnBack_Click" ToolTipService.ToolTip="Powrót do głównego menu." />
+                    <TextBlock Text="Powrót" FontSize="25" VerticalAlignment="Center" Margin="-120" TextWrapping="Wrap"  Foreground="White" ></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btnAbout" FontFamily="Segoe MDL2 Assets" Content="&#xE897;" Height="50"  Width="50" Background="Transparent" />
-                    <TextBlock Text="Info" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnAbout" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE897;" Height="50"  Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="White" />
+                    <TextBlock Text="Info" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="White"></TextBlock>
                 </StackPanel>
             </StackPanel>
         </SplitView.Pane>
@@ -53,7 +53,9 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock x:Name="txtCategory" Grid.Column="1" Text="Test" FontSize="54" Foreground="White"
                            HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="Elephant" />
-                <ComboBox x:Name="cmbCategory" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" PlaceholderText="Kategoria">
+                <TextBlock Grid.Column="1" Grid.Row="2" Text="Zaznacz odpowiednie opcje poniżej, a następnie kliknij 'Rozpocznij test' aby rozpocząć test." TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="20" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
+                <ComboBox x:Name="cmbCategory" Grid.Column="1" Grid.Row="5" Margin="10" HorizontalAlignment="Center" PlaceholderText="Kategoria" Width="110" ToolTipService.ToolTip="Wybierz kategorie słówek które pojawią się w teście.">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -62,12 +64,12 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <ComboBox x:Name="cmbIlosc" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Margin="0 50 0 0" PlaceholderText="Ilość"></ComboBox>
-                <ComboBox x:Name="cmbRodzaj" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Margin="0 100 0 0" PlaceholderText="Rodzaj">
+                <ComboBox x:Name="cmbIlosc" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Margin="0 60 0 0" Width="110" PlaceholderText="Ilość" ToolTipService.ToolTip="Wybierz z ilu pytań ma się składać test."></ComboBox>
+                <ComboBox x:Name="cmbRodzaj" Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Margin="0 110 0 0" Width="110" PlaceholderText="Rodzaj" ToolTipService.ToolTip="Wybierz z jakiej puli słówek chcesz zrobić test.">
                     <ComboBoxItem>Tylko znane</ComboBoxItem>
                     <ComboBoxItem>Wszystkie z danej kategorii</ComboBoxItem>
                 </ComboBox>
-                <Button x:Name="btnStart" Grid.Column="1" Grid.Row="5" Content="Rozpocznij test" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Height="50" Margin="0 0 0 0 " Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" Background="#66FFFFFF" Click="btnStart_Click" ></Button>
+                <Button x:Name="btnStart" Grid.Column="1" Grid.Row="5" Content="Rozpocznij test" VerticalAlignment="Center" HorizontalAlignment="Center" Width="150" Height="50" Margin="0 0 0 0 " Foreground="#FFAC0303"  Background="#66EBEDFF" Click="btnStart_Click" ToolTipService.ToolTip="Kliknij aby rozpocząć test."  />
             </Grid>
         </SplitView.Content>
     </SplitView>
