--- a/LearnEnglish/Test2_1.xaml
+++ b/LearnEnglish/Test2_1.xaml
@@ -70,7 +70,10 @@
                     <RadioButton x:Name ="ans4" Content="Trunk" GroupName="answer" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Foreground="White" />
                 </StackPanel>
                 <Button x:Name="btnNext" Grid.Column="1" Grid.Row="5" Content="Dalej" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Height="50" Margin="0 0 0 0 " Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" Background="#66FFFFFF" Click="btnNext_Click"></Button>
-                <ProgressBar x:Name="prgProgress" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" RequestedTheme="Light" SmallChange="0" Value="-1" Background="#E5000000" BorderThickness="5,1,5,5"></ProgressBar>
+                <ProgressBar x:Name="prgProgress" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" ToolTipService.ToolTip="Wskaźnik ogólny."></ProgressBar>
+                <ProgressBar x:Name="prgGood" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 47 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" Foreground="#FF00D71D" ToolTipService.ToolTip="Wskaźnik poprawnych odpowiedzi,"></ProgressBar>
+                <ProgressBar x:Name="prgBad" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 64 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" Foreground="#FFF00000" ToolTipService.ToolTip="Wskaźnik błędnych odpowiedzi."></ProgressBar>
+
             </Grid>
         </SplitView.Content>
     </SplitView>
