--- a/LearnEnglish/Test2_1.xaml
+++ b/LearnEnglish/Test2_1.xaml
@@ -7,32 +7,33 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="50" OpenPaneLength="150" IsPaneOpen="False" Width="Auto">
+    
+    
+    <SplitView x:Name="MySplitView" DisplayMode="CompactOverlay"  CompactPaneLength="70" OpenPaneLength="200" IsPaneOpen="False" Width="Auto">
         <SplitView.Pane>
             <StackPanel Background="#FF830202">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Name="txtLogo" Text="English" FontSize="18" VerticalAlignment="Center" Visibility="Collapsed" Margin="50 0 0 0"></TextBlock>
-                    <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" Content="&#xE71D;" Height="50" Foreground="#FFAC0303"  Width="50" Background="Transparent" Click="btnShowPane_Click" />
+                    <Button x:Name="btnShowPanel" HorizontalAlignment="Left" FontFamily="Segoe MDL2 Assets" FontSize="30" Content="&#xE71D;" Height="50" Foreground="White"  Width="80" Background="Transparent" Click="btnShowPane_Click" />
                 </StackPanel>
                 <StackPanel x:Name="paneLearn" Orientation="Horizontal">
-                    <Button x:Name="btnStartLearn" FontFamily="Segoe MDL2 Assets" Content="&#xE8FC;" Height="50"  Width="50" Background="Transparent" Click="btnStartLearn_Click" />
-                    <TextBlock Text="Nauka" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnStartLearn" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE8FC;" Height="50" Width="200" Padding="-120 0 0 0"  Background="Transparent" Foreground="White" Click="btnStartLearn_Click" />
+                    <TextBlock Text="Nauka" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="White"></TextBlock>
                 </StackPanel>
                 <StackPanel x:Name="paneTest" Orientation="Horizontal">
-                    <Button x:Name="btnStartTest" FontFamily="Segoe MDL2 Assets" Content="&#xE70F;" Height="50"  Width="50" Foreground="#FFE2CC3F" Background="Transparent"  />
-                    <TextBlock Text="Test" Foreground="#FFE2CC3F" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnStartTest" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE70F;" Height="50" Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="Yellow"  />
+                    <TextBlock Text="Test" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="Yellow"></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btnBack" FontFamily="Segoe MDL2 Assets" Content="&#xE830;" Height="50"  Width="50" Background="Transparent" Click="btnBack_Click" />
-                    <TextBlock Text="Powrót do menu" FontSize="12" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnBack" FontFamily="Segoe MDL2 Assets"  FontSize="25" Content="&#xE830;" Height="50"   Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="White" Click="btnBack_Click" ToolTipService.ToolTip="Powrót do głównego menu." />
+                    <TextBlock Text="Powrót" FontSize="25" VerticalAlignment="Center" Margin="-120" TextWrapping="Wrap"  Foreground="White"></TextBlock>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btnAbout" FontFamily="Segoe MDL2 Assets" Content="&#xE897;" Height="50"  Width="50" Background="Transparent" />
-                    <TextBlock Text="Info" FontSize="18" VerticalAlignment="Center"></TextBlock>
+                    <Button x:Name="btnAbout" FontFamily="Segoe MDL2 Assets" FontSize="25" Content="&#xE897;" Height="50"  Width="200" Padding="-120 0 0 0" Background="Transparent" Foreground="White" Click="btnAbout_Click" />
+                    <TextBlock Text="Info" FontSize="25" VerticalAlignment="Center" Margin="-120" Foreground="White"></TextBlock>
                 </StackPanel>
             </StackPanel>
         </SplitView.Pane>
-
         <SplitView.Content>
             <Grid>
                 <Grid.Background>
@@ -56,23 +57,25 @@
                            HorizontalAlignment="Center" Margin="0 20 0 0" FontFamily="Elephant" />
                 <TextBlock x:Name="txtCount" Grid.Column="1" Text="0" FontSize="14" Foreground="White"
                             VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 30 30 0" />
-                <TextBlock Grid.Column="1" Grid.Row="1" Text="Polish:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="Monotype Corsiva" />
+                <TextBlock Grid.Column="1" Grid.Row="1" Text="Słowo po polsku:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 50 0 0" FontFamily="Monotype" />
 
                 <TextBlock x:Name="txtPol" Grid.Column="1" Grid.Row="2" Text="Piłka nożna" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="24" Foreground="White"
                            HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 5 0 0" />
                 <TextBlock Grid.Column="1" Grid.Row="3" Text="Wybierz pasujące słowo:" TextAlignment="Center" TextWrapping="WrapWholeWords" FontSize="14" Foreground="White"
-                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" FontFamily="Monotype Corsiva" />
+                           HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" FontFamily="Monotype" />
                 <StackPanel x:Name="rbtnStackPanel" Background="#FF8F553F" Grid.Column="1" Grid.Row="4">
-                    <RadioButton x:Name ="ans1" GroupName="answer"  HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" Content="Football" BorderBrush="White"/>
+                    <RadioButton x:Name ="ans1" GroupName="answer"  HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" Content="Football" BorderBrush="White" IsChecked="True"/>
                     <RadioButton x:Name ="ans2" Content="Hospital" GroupName="answer" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" />
                     <RadioButton x:Name ="ans3" Content="Beautiful" GroupName="answer" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Foreground="White" />
                     <RadioButton x:Name ="ans4" Content="Trunk" GroupName="answer" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Foreground="White" />
                 </StackPanel>
-                <Button x:Name="btnNext" Grid.Column="1" Grid.Row="5" Content="Dalej" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Height="50" Margin="0 0 0 0 " Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" Background="#66FFFFFF" Click="btnNext_Click"></Button>
+                <Button x:Name="btnNext" Grid.Column="1" Grid.Row="5" Content="Dalej" VerticalAlignment="Top" HorizontalAlignment="Center" Width="100" Height="50" Margin="0 100 0 0 " Foreground="#FFAC0303" BorderBrush="#FFC1C1C1" Background="#66FFFFFF" Click="btnNext_Click"></Button>
+                <TextBlock Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" Margin="0 10 0 0">Ogółem</TextBlock>
+                <TextBlock Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" Margin="0 50 0 0">Poprawne</TextBlock>
                 <ProgressBar x:Name="prgProgress" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 30 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" ToolTipService.ToolTip="Wskaźnik ogólny."></ProgressBar>
-                <ProgressBar x:Name="prgGood" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 47 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" Foreground="#FF00D71D" ToolTipService.ToolTip="Wskaźnik poprawnych odpowiedzi,"></ProgressBar>
-                <ProgressBar x:Name="prgBad" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 64 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" Foreground="#FFF00000" ToolTipService.ToolTip="Wskaźnik błędnych odpowiedzi."></ProgressBar>
+                <ProgressBar x:Name="prgGood" Grid.Column="1" Grid.Row="5" Height="20"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 70 0 0" RequestedTheme="Light" SmallChange="0" Value="0" Background="#E5000000" BorderThickness="5,1,5,5" Foreground="#FF00D71D" ToolTipService.ToolTip="Wskaźnik poprawnych odpowiedzi,"></ProgressBar>
+                <MediaElement x:Name="mediaSound"></MediaElement>
 
             </Grid>
         </SplitView.Content>
